tarot_juicer/static/css/carousel.css
:root {
  --gap: 10px;
  --carousel-width: 80%;
}

.carousel {
  width: var(--carousel-width);
  margin: 20px auto;
}

.slider {
  display: grid;
  grid-gap: var(--gap);
  grid-template-columns: repeat(auto-fill, 1fr);
  overflow: hidden;
  padding: 20px 10px;
}

.slide {
  grid-row: 1;
  scroll-snap-align: start;
  min-width: 95px;
  max-width: 150px;
}

.slide img:hover {
  box-shadow: 0 0 5px white, 0 0 10px white;
}

.slide img {
  border-radius: 5px;
  height: 100%;
  object-fit: cover;
}

.slide img#active {
  box-shadow: 0 0 5px orange, 0 0 10px orange;
}

.slider:hover{
  cursor: -webkit-grab;
  cursor: grab;
}

.slider.grabbing {
  cursor: grabbing;
  cursor: -webkit-grabbing;
}

.snap {
  scroll-snap-type: x mandatory;
}

